--- a/CuidooApp/Storyboards/Config.storyboard
+++ b/CuidooApp/Storyboards/Config.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BQs-6l-7Co">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hb7-lu-zoa">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
@@ -8,19 +8,19 @@
     </dependencies>
     <scenes>
         <!--View Controller-->
-        <scene sceneID="gp4-Ak-48H">
+        <scene sceneID="BC1-R3-t5E">
             <objects>
-                <viewController id="BQs-6l-7Co" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="EmO-AR-f4j">
+                <viewController id="hb7-lu-zoa" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="0YY-HB-jPg">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="LZj-Td-oJz"/>
+                        <viewLayoutGuide key="safeArea" id="Q5r-8g-2ID"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="IZF-Bv-Vf0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YJA-rS-Ufa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-213" y="67"/>
+            <point key="canvasLocation" x="91" y="76"/>
         </scene>
     </scenes>
 </document>
