--- a/CuidooApp/Storyboards/Search.storyboard
+++ b/CuidooApp/Storyboards/Search.storyboard
@@ -115,6 +115,9 @@
                     <navigationItem key="navigationItem" title="Cuidoo" id="Jab-k6-Wd2">
                         <barButtonItem key="rightBarButtonItem" image="person.crop.circle" catalog="system" id="inK-Y6-fla">
                             <color key="tintColor" red="1" green="0.38701313729999998" blue="0.3767012656" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <connections>
+                                <segue destination="MNg-Fq-qgL" kind="show" id="a6k-xF-Fqw"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
@@ -134,7 +137,7 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bf7-9c-vls" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-697" y="1367"/>
+            <point key="canvasLocation" x="-219" y="885"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mSN-Xx-Oge">
